Fix alignment of search input background for RTL languages.

--- a/wiki/src/local.rtl.css
+++ b/wiki/src/local.rtl.css
@@ -35,6 +35,10 @@ html[dir="rtl"] #tor_check {
     margin-right: 2em;
 }
 
+html[dir="rtl"] input#searchbox {
+    background-position: 3% 50%;
+}
+
 html[dir="rtl"] #crumbs {
     padding-right: 0;
 }
